# CPPAdvanced

Sessie 1/Voorbeeld_ConstCorrectness/: CMakeLists.txt  Module.cpp  Module.h  Student.cpp  Student.h  main.cpp
Sessie 1/Voorbeeld_Decorator/: BackgroundDecorator.h  BorderDecorator.cpp  CMakeLists.txt  InputWidget.cpp  InputWidget.h  TouchDecorator.cpp  TouchDecorator.h  Widget.cpp  Widget.h  main.cpp
Sessie 1/Voorbeeld_DecoratorFactoryMethod/: BackgroundDecorator.cpp  BorderDecorator.h  CMakeLists.txt  Decorator.cpp  Decorator.h  InputWidget.h  TextWidget.cpp  TextWidget.h  TouchDecorator.h  VirtualTouchDecorator.cpp  VirtualTouchDecorator.h  Widget.cpp  Widget.h  main.cpp
Sessie 1/Voorbeeld_assignmentoper-ContainerShip/: Container.cpp  Container.h  Ship.cpp  Ship.h  main.cpp
Sessie 1/Voorbeeld_oper-ContainerShip/: Container.cpp  Container.h  Ship.cpp  Ship.h  main.cpp
Sessie 1/Voorbeeld_streamoper-Config/: CMakeLists.txt  Config.cpp  Config.h  main.cpp
Sessie 1/Voorbeeld_streamoper-ContainerShip/: CMakeLists.txt  Container.cpp  Container.h  Ship.cpp  Ship.h  main.cpp
Sessie 2/Voorbeeld-FunctionObject/: CMakeLists.txt  main.cpp
Sessie 2/Voorbeeld-FunctionPointer/: CMakeLists.txt  main.cpp
Sessie 2/Voorbeeld-FunctionPointerTypeDef/: CMakeLists.txt  main.cpp
Sessie 2/Voorbeeld-JurassicParkArray/: CMakeLists.txt  Dinosaur.cpp  (+4 more)
Sessie 2/Voorbeeld-StrategyBTWBerekening/: BTWBerekening.cpp  BTWBerekening.h  BritseBTWBerekening.cpp  BritseBTWBerekening.h  CMakeLists.txt  NederlandseBTWBerekening.cpp  NederlandseBTWBerekening.h  Verkoop.cpp  Verkoop.h  main.cpp
(+53 files in other folders)
